force-app/main/default/objects/Class_Student_Exam__c/Class_Student_Exam__c.object-meta.xml
<CustomObject>
    <label>Class Student Exam</label>
    <nameField>
        <label>Exam Conducted</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Class Student Exams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>