force-app/main/default/objects/Class_Student_Exam__c/fields/Class_Student__c.field-meta.xml
<CustomField>
    <fullName>Class_Student__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Class Student</label>
    <referenceTo>Class_Student__c</referenceTo>
    <relationshipLabel>Class Student Exams</relationshipLabel>
    <relationshipName>Class_Student_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>