force-app/main/default/objects/Class_Student_Exam__c/fields/Exam__c.field-meta.xml
<CustomField>
    <fullName>Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exam</label>
    <referenceTo>Exam__c</referenceTo>
    <relationshipLabel>Class Student Exams</relationshipLabel>
    <relationshipName>Class_Student_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>