force-app/main/default/objects/Class_Student_Exam__c/fields/Marks_In_Social__c.field-meta.xml
<CustomField>
    <fullName>Marks_In_Social__c</fullName>
    <label>Marks In Social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>