force-app/main/default/objects/Class_Student_Exam__c/fields/Pass_Marks_In_Social__c.field-meta.xml
<CustomField>
    <fullName>Pass_Marks_In_Social__c</fullName>
    <label>Pass Marks In Social</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>