force-app/main/default/objects/Class_Student_Exam__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Total marks secured</description>
    <formula>Marks_In_English__c +  Marks_In_Math__c +  Marks_In_Science__c +  Marks_In_Social__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Result</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>